# local-ai-ops

./: README.md
agent-scheduler/: .gitignore  Cargo.toml  INSTALL.md  PLAN.md  config.yaml.example  install.sh
agent-scheduler/container/: Dockerfile  run-task.sh
agent-scheduler/crates/laio-admin/: Cargo.toml
agent-scheduler/crates/laio-admin/src/: dashboard.rs  main.rs
agent-scheduler/crates/laio-common/: Cargo.toml
agent-scheduler/crates/laio-common/migrations/: 001_initial.sql
agent-scheduler/crates/laio-common/src/: config.rs  db.rs  idle_guard.rs  lemonade.rs  lib.rs  types.rs
agent-scheduler/crates/laio-dispatcher/: Cargo.toml
agent-scheduler/crates/laio-dispatcher/src/: main.rs
agent-scheduler/crates/laio-orchestrator/: Cargo.toml
agent-scheduler/crates/laio-orchestrator/src/: main.rs
agent-scheduler/systemd/: laio-dispatcher.service  laio-dispatcher.timer  laio-orchestrator.service  laio-orchestrator.timer
lemonade-idle/: README.md  idle-guard.py  sampler.py
lemonade-idle/systemd/: codex-agent.service  codex-agent.timer  lemonade-sampler.service
skills/gh-fix-issue/: SKILL.md
skills/gh-fix-issue/agents/: openai.yaml
skills/gh-review-pr/: SKILL.md
skills/gh-review-pr/agents/: openai.yaml
