[workspace]
members = [
    "crates/laio-common",
    "crates/laio-orchestrator",
    "crates/laio-dispatcher",
    "crates/laio-admin",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
sqlx        = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "chrono"] }
reqwest     = { version = "0.12", features = ["json"] }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4", "serde"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"
thiserror   = "1"
clap        = { version = "4", features = ["derive", "env"] }
shellexpand = "3"
dirs-next   = "2"

laio-common = { path = "crates/laio-common" }
