[package]
name    = "laio-admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "laio-admin"
path = "src/main.rs"

[dependencies]
laio-common        = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
chrono             = { workspace = true }
shellexpand        = { workspace = true }
sqlx               = { workspace = true }
